Fix overflow issue

--- a/src/styles/Project.module.css
+++ b/src/styles/Project.module.css
@@ -1,10 +1,11 @@
 .root {
   position: relative;
+  margin: 1rem;
 }
 
 .container {
   overflow: hidden;
-  margin: 1rem 50px 1rem 1rem;
+  margin-right: 50px;
   height: 100%;
 }
 
@@ -34,6 +35,7 @@
 
 .right {
   right: -1.4rem;
+  top: 56%;
   left: auto;
 }
 
